Structure home page

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,44 @@
     <title>Leaderboard-project</title>
 </head>
 <body>
+    <header>
+     <nav class="nav-container">
+        <div class="logo">
+            <img src="./assets/2.jpg" alt="img">
+            <!-- <span>logo</span> -->
+        </div>
+        <ul class="nav">
+            <li>home</li>
+            <li>about</li>
+            <li>contact</li>
+        </ul>
+
+     </nav>
+    </header>
+    <main>
+        <div class="main-container">
+            <div class="items">
+                <div class="item-img-container">
+                    <img src="" alt="">
+                </div>
+                <div class="detail-container">
+                    <span>name</span>
+                    <button>like</button>
+                </div>
+                <div class="comment-btn">
+                    <button>comment</button>
+                </div>
+            </div>
+            <div class="items"></div>
+            <div class="items"></div>
+            <div class="items"></div>
+            <div class="items"></div>
+            <div class="items"></div>
+
+        </div>
+
+    </main>
+    <footer></footer>
     <script src="index.js"></script>
 </body>
 </html>
