Add popup section

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,25 @@
 
     </main>
     <footer></footer>
+
+    <section class="popup">
+        <article class="pp-header">
+
+        </article>
+        <article class="pp-body">
+            <ul class="comments-container">
+                
+            </ul>
+        </article>
+        <article class="pp-footer">
+            <p>Add a comment</p>
+            <form class="form">
+                <input class="your-name" type="text" placeholder="Your name">
+                <textarea class="msg" placeholder="Your insights"></textarea>
+                <button type="submit">Comment</button>
+            </form>
+        </article>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
