--- a/src/index.html
+++ b/src/index.html
@@ -46,24 +46,28 @@
     </main>
     <footer></footer>
 
-    <section class="popup">
-        <article class="pp-header">
+    <section class="popup-section">
+        <article class="popup">
+            <div class="pp-header">
 
-        </article>
-        <article class="pp-body">
-            <ul class="comments-container">
-                
-            </ul>
-        </article>
-        <article class="pp-footer">
-            <p>Add a comment</p>
-            <form class="form">
-                <input class="your-name" type="text" placeholder="Your name">
-                <textarea class="msg" placeholder="Your insights"></textarea>
-                <button type="submit">Comment</button>
-            </form>
+            </div>
+            <div class="pp-body">
+                <p>Comments ()</p>
+                <ul class="comments-container">
+                    
+                </ul>
+            </div>
+            <div class="pp-footer">
+                <p>Add a comment</p>
+                <form class="form">
+                    <input class="your-name" type="text" placeholder="Your name">
+                    <textarea class="msg" placeholder="Your insights"></textarea>
+                    <button type="submit">Comment</button>
+                </form>
+            </div>
         </article>
     </section>
+
     <script src="index.js"></script>
 </body>
 </html>
