--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,20 @@
     <section class="popup-section">
         <article class="popup">
             <div class="pp-header">
-
+                <button id="close-icon">X</button>
+                <div class="image"></div>
+                <p class="pp-meal-name">Meal name</p>
+                <div class="pp-meal-details">
+                    <p id="pp-meal-area" class="pp-meal-detail">Area:</p>
+                    <p id="pp-meal-category" class="pp-meal-detail">Category:</p>
+                </div>
             </div>
             <div class="pp-body">
-                <p>Comments ()</p>
-                <ul class="comments-container">
-                    
+                <p class="pp-comments">Comments (<span id="comments-number">23</span>)</p>
+                <ul class="pp-comments-container">
+                    <li class="pp-comment">
+                        03/11/2021 Alex: I'd love to buy it!
+                    </li>
                 </ul>
             </div>
             <div class="pp-footer">
