--- a/src/index.html
+++ b/src/index.html
@@ -58,16 +58,22 @@
                 </div>
             </div>
             <div class="pp-body">
-                <p class="pp-comments">Comments (<span id="comments-number">23</span>)</p>
+                <p class="pp-comments-title">Comments (<span id="comments-number">23</span>)</p>
                 <ul class="pp-comments-container">
+                    <li class="pp-comment">
+                        03/11/2021 Alex: I'd love to buy it!
+                    </li>
+                    <li class="pp-comment">
+                        03/11/2021 Alex: I'd love to buy it! but where is the place to be able to bring my family and we all enjoy the nice weather?
+                    </li>
                     <li class="pp-comment">
                         03/11/2021 Alex: I'd love to buy it!
                     </li>
                 </ul>
             </div>
             <div class="pp-footer">
-                <p>Add a comment</p>
                 <form class="form">
+                    <p class="pp-form-title">Add a comment</p>
                     <input class="your-name" type="text" placeholder="Your name">
                     <textarea class="msg" placeholder="Your insights"></textarea>
                     <button type="submit">Comment</button>
