--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                     <p class="pp-form-title">Add a comment</p>
                     <input class="your-name" type="text" placeholder="Your name">
                     <textarea class="msg" placeholder="Your insights"></textarea>
-                    <button type="submit">Comment</button>
+                    <button id="pp-comment-btn">Comment</button>
                 </form>
             </div>
         </article>
