Add style to home page

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     <title>Leaderboard-project</title>
 </head>
 <body>
+    <script src="index.js"></script>
     <header>
      <nav class="nav-container">
         <div class="logo">
-            <img src="./assets/2.jpg" alt="img">
-            <!-- <span>logo</span> -->
+            <img class='logo-img' src='' alt="img">
         </div>
         <ul class="nav">
             <li>home</li>
@@ -22,29 +22,12 @@
      </nav>
     </header>
     <main>
-        <div class="main-container">
-            <div class="items">
-                <div class="item-img-container">
-                    <img src="" alt="">
-                </div>
-                <div class="detail-container">
-                    <span>name</span>
-                    <button>like</button>
-                </div>
-                <div class="comment-btn">
-                    <button>comment</button>
-                </div>
-            </div>
-            <div class="items"></div>
-            <div class="items"></div>
-            <div class="items"></div>
-            <div class="items"></div>
-            <div class="items"></div>
+        <div class="item-container">
 
         </div>
 
     </main>
     <footer></footer>
-    <script src="index.js"></script>
+  
 </body>
 </html>
