--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
     </main>
     <footer></footer>
-    <section class="popup-section">
+    <section class="popup-section hide">
         <article class="popup">
             <div class="pp-header">
                 <button id="close-icon">X</button>
