--- a/src/index.html
+++ b/src/index.html
@@ -28,15 +28,15 @@
 
     </main>
     <footer></footer>
-    <section class="popup-section">
+    <section class="popup-section hide">
         <article class="popup">
             <div class="pp-header">
                 <button id="close-icon">X</button>
                 <div class="image"></div>
-                <p class="pp-meal-name">Meal name</p>
+                <p class="pp-meal-name"></p>
                 <div class="pp-meal-details">
-                    <p id="pp-meal-area" class="pp-meal-detail">Area:</p>
-                    <p id="pp-meal-category" class="pp-meal-detail">Category:</p>
+                    <p class="pp-meal-detail">Area:<span id="pp-meal-area"></span></p>
+                    <p class="pp-meal-detail">Category:<span id="pp-meal-category"></span></p>
                 </div>
             </div>
             <div class="pp-body">
