--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
         <article class="popup">
             <div class="pp-header">
                 <button id="close-icon">X</button>
-                <div class="image"></div>
+                <img id="pp-image" class="image" src="">
                 <p class="pp-meal-name"></p>
                 <div class="pp-meal-details">
-                    <p class="pp-meal-detail">Area:<span id="pp-meal-area"></span></p>
-                    <p class="pp-meal-detail">Category:<span id="pp-meal-category"></span></p>
+                    <p class="pp-meal-detail">Area: <span id="pp-meal-area"></span></p>
+                    <p class="pp-meal-detail">Category: <span id="pp-meal-category"></span></p>
                 </div>
             </div>
             <div class="pp-body">
