--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <img class='logo-img' src='' alt="img">
         </div>
         <ul class="nav">
-            <li>home</li>
+            <li class="test">home</li>
             <li>about</li>
             <li>contact</li>
         </ul>
