--- a/src/index.html
+++ b/src/index.html
@@ -42,24 +42,16 @@
             <div class="pp-body">
                 <p class="pp-comments-title">Comments (<span id="comments-number">23</span>)</p>
                 <ul class="pp-comments-container">
-                    <li class="pp-comment">
-                        03/11/2021 Alex: I'd love to buy it!
-                    </li>
-                    <li class="pp-comment">
-                        03/11/2021 Alex: I'd love to buy it! but where is the place to be able to bring my family and we all enjoy the nice weather?
-                    </li>
-                    <li class="pp-comment">
-                        03/11/2021 Alex: I'd love to buy it!
-                    </li>
+
                 </ul>
             </div>
             <div class="pp-footer">
-                <form class="form">
+                <div class="form">
                     <p class="pp-form-title">Add a comment</p>
                     <input class="your-name" type="text" placeholder="Your name">
                     <textarea class="msg" placeholder="Your insights"></textarea>
                     <button id="pp-comment-btn">Comment</button>
-                </form>
+                </div>
             </div>
         </article>
     </section>
