--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="pp-body">
-                <p class="pp-comments-title">Comments (<span id="comments-number">23</span>)</p>
+                <p class="pp-comments-title">Comments (<span id="comments-number"></span>)</p>
                 <ul class="pp-comments-container">
 
                 </ul>
