Add items counter to the home page

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,13 @@
             <li>about</li>
             <li>contact</li>
         </ul>
-
      </nav>
     </header>
     <main>
+        <div class="item-number">
+            <h3></h3>
+        </div>
         <div class="item-container">
-
         </div>
 
     </main>
