Add footer content

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,9 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer>
+              
+    </footer>
     <section class="popup-section hide">
         <article class="popup">
             <div class="pp-header">
